更新框架使用Net6

--- a/zjs.WebApi/appsettings.json
+++ b/zjs.WebApi/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionType": "sqlserver",
   "ConnectionStrings": {
-    "MyContext": "Server=localhost;port=3306;user=root;password=123456;database=My"
+    //"MyContext": "Server=localhost;port=3306;user=root;password=123456;database=My"
+    "MyContext": "Server=.;Database=SFDB;User Id=TestUser;Password=123"
   }
 }
